# pifus

./: .gitignore  CMakeLists.txt  README.md  p1.diff
driver/: CMakeLists.txt  findboundaryface.f90  gridutils.f90  modules.f90  myfunc.f90  pifus_accuracy.f90  test_connect.f90  testpifus.f90
gridGen/: CMakeLists.txt
src/: ADT.C  ADT.h  CMakeCache.txt  CMakeLists.txt  MeshBlock.C  MeshBlock.h  buildADTrecursion.C  buildADTrecursion.c  cuda_emu_macros.h  cuda_macros.h  dADT.C  dADT.cu  dADT.h  dMeshBlock.C  dMeshBlock.cu  dMeshBlock.h  dMeshBlock2.C  dMeshBlock2.cu  device_functions.h  donorSearch.cu  find_neighbors.cu  interpLS1.f90  interpRBF.f90  math_functions.h  morton.cu  pifus.C  pifus.h  pifusInterface.C  pifus_cuda.h  pifus_ext.h  pifus_types.h  preproc.cu  searchADTRegion.C  search_functions.h  solveMat.f90
test/: clean.sh  gridStudy.sh
test/grid/: data.tri
test/grid/input_files/: input_16000  input_2000  input_32000  input_4000  input_64000  input_8000
test/grid/sphere_files/: sphere_1000.facet  sphere_16000.facet  sphere_2000.facet  sphere_4000.facet  sphere_8000.facet
